# addin-rabbitmq-stream

./: Cargo.toml  README.md
conf/: Configuration.xml
conf/DataProcessors/: Тесты.xml
conf/DataProcessors/Тесты/Forms/: Форма.xml
conf/DataProcessors/Тесты/Forms/Форма/Ext/: Form.xml
conf/DataProcessors/Тесты/Forms/Форма/Ext/Form/: Module.bsl
conf/Languages/: Русский.xml
src/: addin_consumer.rs  addin_environment.rs  addin_producer.rs  environment_builder.rs  environments.rs  lib.rs
